common/force-app/main/default/objects/Raise__c/Raise__c.object-meta.xml
<CustomObject>
    <description>The raise object accountable for keeping track of a Founder&apos;s raise process.</description>
    <label>Raise</label>
    <nameField>
        <label>Raise Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Raise</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>