common/force-app/main/default/objects/Raise__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>Restrict</deleteConstraint>
    <description>This field represents an account lookup relationship.</description>
    <inlineHelpText>Select an account to associate with this record.</inlineHelpText>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Raise</relationshipLabel>
    <relationshipName>Raise</relationshipName>
    <required>true</required>
    <type>Lookup</type>
</CustomField>