common/force-app/main/default/objects/Raise__c/fields/Add_Ons__c.field-meta.xml
<CustomField>
    <fullName>Add_Ons__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Add-Ons</label>
    <type>Checkbox</type>
</CustomField>