common/force-app/main/default/objects/Raise__c/fields/Applications_Created__c.field-meta.xml
<CustomField>
    <fullName>Applications_Created__c</fullName>
    <inlineHelpText>Number of Applications Created. This is calculated after a new Opportunity is added or deleted.</inlineHelpText>
    <label>Applications Created</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>