common/force-app/main/default/objects/Raise__c/fields/Approval_Flag__c.field-meta.xml
<CustomField>
    <fullName>Approval_Flag__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Approval Flag</label>
    <type>Checkbox</type>
</CustomField>