common/force-app/main/default/objects/Raise__c/fields/Company__c.field-meta.xml
<CustomField>
    <fullName>Company__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field represents a master-detail relationship with the Company object.</description>
    <inlineHelpText>Select the company to which this record belongs.</inlineHelpText>
    <label>Company</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Raise (Company)</relationshipLabel>
    <relationshipName>Company</relationshipName>
    <type>Lookup</type>
</CustomField>