common/force-app/main/default/objects/Raise__c/fields/Content_approved__c.field-meta.xml
<CustomField>
    <fullName>Content_approved__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates whether the content has been approved.</description>
    <inlineHelpText>Check this box if the content has been reviewed and approved.
A task to the record owner to instruct the Funds Management Team to send the Establishment Fee to the founder will also be created when this field is checked.</inlineHelpText>
    <label>Content approved</label>
    <type>Checkbox</type>
</CustomField>