common/force-app/main/default/objects/Raise__c/fields/Course_unlocked__c.field-meta.xml
<CustomField>
    <fullName>Course_unlocked__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This checkbox indicates whether the course has been unlocked for the user.</description>
    <inlineHelpText>Check this box if the user has unlocked access to the course.</inlineHelpText>
    <label>Course unlocked</label>
    <type>Checkbox</type>
</CustomField>