common/force-app/main/default/objects/Raise__c/fields/Days_Since_Raise_Activity_Update__c.field-meta.xml
<CustomField>
    <fullName>Days_Since_Raise_Activity_Update__c</fullName>
    <formula>IF(
    OR(
        ISPICKVAL(Status__c, &quot;Published&quot;),
        ISPICKVAL(Status__c, &quot;Closed&quot;)
    ),
    &quot;&quot;,
    IF(
        ISBLANK(LastActivityDate),
        &quot;&quot;,
        TEXT(TODAY() - LastActivityDate) &amp; &quot; days&quot;
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Since Raise Activity Update</label>
    <type>Text</type>
</CustomField>