common/force-app/main/default/objects/Raise__c/fields/Distribution_frequency__c.field-meta.xml
<CustomField>
    <fullName>Distribution_frequency__c</fullName>
    <label>Distribution frequency</label>
    <length>30</length>
    <type>Text</type>
</CustomField>