common/force-app/main/default/objects/Raise__c/fields/Entry_exit_fees__c.field-meta.xml
<CustomField>
    <fullName>Entry_exit_fees__c</fullName>
    <label>Entry &amp; exit fees</label>
    <length>30</length>
    <type>Text</type>
</CustomField>