common/force-app/main/default/objects/Raise__c/fields/EOI__c.field-meta.xml
<CustomField>
    <fullName>EOI__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field represents a lookup relationship with the EOI object.</description>
    <inlineHelpText>Select an Expression of Interest (EOI) associated with this record.</inlineHelpText>
    <label>EOI</label>
    <referenceTo>EOI__c</referenceTo>
    <relationshipLabel>Raise</relationshipLabel>
    <relationshipName>Raise</relationshipName>
    <type>Lookup</type>
</CustomField>