common/force-app/main/default/objects/Raise__c/fields/Final_Approval__c.field-meta.xml
<CustomField>
    <fullName>Final_Approval__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>This will be checked once final review and approval is completed.</inlineHelpText>
    <label>Final Approval</label>
    <type>Checkbox</type>
</CustomField>