common/force-app/main/default/objects/Raise__c/fields/Form_ABN__c.field-meta.xml
<CustomField>
    <fullName>Form_ABN__c</fullName>
    <description>This field stores the Australian Business Number (ABN).</description>
    <inlineHelpText>Enter the Australian Business Number (ABN) for this company.</inlineHelpText>
    <label>ABN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>