common/force-app/main/default/objects/Raise__c/fields/Form_ACN__c.field-meta.xml
<CustomField>
    <fullName>Form_ACN__c</fullName>
    <description>This field stores the Australian Company Number (ACN).</description>
    <inlineHelpText>Enter the Australian Company Number (ACN) for this company.</inlineHelpText>
    <label>ACN</label>
    <length>11</length>
    <type>Text</type>
</CustomField>