common/force-app/main/default/objects/Raise__c/fields/Form_Business_model__c.field-meta.xml
<CustomField>
    <fullName>Form_Business_model__c</fullName>
    <description>This field contains a long text description of the business model.</description>
    <inlineHelpText>Provide a detailed description of the business model.</inlineHelpText>
    <label>Business model</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>