common/force-app/main/default/objects/Raise__c/fields/Form_Business_strategy__c.field-meta.xml
<CustomField>
    <fullName>Form_Business_strategy__c</fullName>
    <description>This field contains a long text description of the business strategy.</description>
    <inlineHelpText>Provide a detailed description of the business strategy.</inlineHelpText>
    <label>Business strategy</label>
    <length>1400</length>
    <type>LongTextArea</type>
</CustomField>