common/force-app/main/default/objects/Raise__c/fields/Form_Company_Legal_Trading_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Company_Legal_Trading_Name__c</fullName>
    <description>This field stores the full legal trading name of the company.</description>
    <inlineHelpText>Enter the full legal trading name of the company.</inlineHelpText>
    <label>Company&apos;s full legal trading name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>