common/force-app/main/default/objects/Raise__c/fields/Form_Company_Name__c.field-meta.xml
<CustomField>
    <fullName>Form_Company_Name__c</fullName>
    <description>This is a brand name or the name customers know the company by.</description>
    <inlineHelpText>This is a brand name or the name customers know the company by.</inlineHelpText>
    <label>Company&apos;s Full Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>