common/force-app/main/default/objects/Raise__c/fields/Form_Company_one_liner__c.field-meta.xml
<CustomField>
    <fullName>Form_Company_one_liner__c</fullName>
    <description>This field contains a brief one-liner description of the company.</description>
    <inlineHelpText>Provide a concise, one-sentence description of your company.</inlineHelpText>
    <label>Company one liner</label>
    <type>TextArea</type>
</CustomField>