common/force-app/main/default/objects/Raise__c/fields/Form_Company_Overview__c.field-meta.xml
<CustomField>
    <fullName>Form_Company_Overview__c</fullName>
    <description>This field provides an overview of the company.</description>
    <inlineHelpText>Give a detailed overview of your company’s mission, vision, and operations.</inlineHelpText>
    <label>Who are we</label>
    <length>1400</length>
    <type>LongTextArea</type>
</CustomField>