common/force-app/main/default/objects/Raise__c/fields/Form_Company_Postcode__c.field-meta.xml
<CustomField>
    <fullName>Form_Company_Postcode__c</fullName>
    <description>This field describes the companies postcode</description>
    <label>Company Postcode</label>
    <length>255</length>
    <type>Text</type>
</CustomField>