common/force-app/main/default/objects/Raise__c/fields/Form_Company_State__c.field-meta.xml
<CustomField>
    <fullName>Form_Company_State__c</fullName>
    <label>Company State</label>
    <length>255</length>
    <type>Text</type>
</CustomField>