common/force-app/main/default/objects/Raise__c/fields/Form_Company_Street_Address__c.field-meta.xml
<CustomField>
    <fullName>Form_Company_Street_Address__c</fullName>
    <description>This field is the Company Street address</description>
    <label>Company Street Address</label>
    <length>255</length>
    <type>Text</type>
</CustomField>