common/force-app/main/default/objects/Raise__c/fields/Form_Company_Suburb__c.field-meta.xml
<CustomField>
    <fullName>Form_Company_Suburb__c</fullName>
    <description>This describes the companies suburb</description>
    <label>Company Suburb</label>
    <length>255</length>
    <type>Text</type>
</CustomField>