common/force-app/main/default/objects/Raise__c/fields/Form_Consent_for_individuals__c.field-meta.xml
<CustomField>
    <fullName>Form_Consent_for_individuals__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates consent for individuals.</description>
    <inlineHelpText>Check this box to indicate consent for the involved individuals.</inlineHelpText>
    <label>Sign off on consent for individuals</label>
    <type>Checkbox</type>
</CustomField>