common/force-app/main/default/objects/Raise__c/fields/Form_Conversion_terms__c.field-meta.xml
<CustomField>
    <fullName>Form_Conversion_terms__c</fullName>
    <description>Describe when and how the convertible note will convert.</description>
    <inlineHelpText>Describe when and how the convertible note will convert.</inlineHelpText>
    <label>Conversion terms</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>