common/force-app/main/default/objects/Raise__c/fields/Form_Cooling_off_rights__c.field-meta.xml
<CustomField>
    <fullName>Form_Cooling_off_rights__c</fullName>
    <description>This field describes the cooling-off rights.</description>
    <inlineHelpText>Describe the rights for cooling-off period provided to the customers.</inlineHelpText>
    <label>Cooling-off rights</label>
    <length>1400</length>
    <type>LongTextArea</type>
</CustomField>