common/force-app/main/default/objects/Raise__c/fields/Form_Coupon_rate__c.field-meta.xml
<CustomField>
    <fullName>Form_Coupon_rate__c</fullName>
    <description>Form coupon rate if the investment product type is preference shares or convertible note</description>
    <label>Coupon rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>