common/force-app/main/default/objects/Raise__c/fields/Form_Current_page_number__c.field-meta.xml
<CustomField>
    <fullName>Form_Current_page_number__c</fullName>
    <description>Indicates the current page index that the user is in the form</description>
    <label>Current page index</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>