common/force-app/main/default/objects/Raise__c/fields/Form_Debt_funding_and_other_funding__c.field-meta.xml
<CustomField>
    <fullName>Form_Debt_funding_and_other_funding__c</fullName>
    <description>This field provides information about debt funding and other funding sources.</description>
    <inlineHelpText>Include details about the company&apos;s debt funding and other financial sources.</inlineHelpText>
    <label>Debt funding and other funding</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>