common/force-app/main/default/objects/Raise__c/fields/Form_Details_of_previous_CSF_offers__c.field-meta.xml
<CustomField>
    <fullName>Form_Details_of_previous_CSF_offers__c</fullName>
    <description>Details of previous CSF Offers</description>
    <label>Details of previous CSF offers</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>