common/force-app/main/default/objects/Raise__c/fields/Form_Differentiation__c.field-meta.xml
<CustomField>
    <fullName>Form_Differentiation__c</fullName>
    <description>This field highlights the differentiation points of the company.</description>
    <inlineHelpText>Highlight what sets your company apart from competitors.</inlineHelpText>
    <label>Differentiation</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>