common/force-app/main/default/objects/Raise__c/fields/Form_Discount_rate__c.field-meta.xml
<CustomField>
    <fullName>Form_Discount_rate__c</fullName>
    <description>Please insert the discount rate that applies to SAFE notes.</description>
    <inlineHelpText>Please insert the discount rate that applies to these notes.</inlineHelpText>
    <label>Discount rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>