common/force-app/main/default/objects/Raise__c/fields/Form_Dividend_option__c.field-meta.xml
<CustomField>
    <fullName>Form_Dividend_option__c</fullName>
    <description>Describe when and how dividends are paid to investors.</description>
    <inlineHelpText>Describe when and how dividends are paid to investors.</inlineHelpText>
    <label>Dividend option</label>
    <length>255</length>
    <type>Text</type>
</CustomField>