common/force-app/main/default/objects/Raise__c/fields/Form_End_reached__c.field-meta.xml
<CustomField>
    <fullName>Form_End_reached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the user has reached the end of the form</description>
    <label>End reached</label>
    <type>Checkbox</type>
</CustomField>