common/force-app/main/default/objects/Raise__c/fields/Form_Facebook__c.field-meta.xml
<CustomField>
    <fullName>Form_Facebook__c</fullName>
    <description>This field contains the URL of the company&apos;s Facebook page.</description>
    <inlineHelpText>Provide the URL for your company&apos;s Facebook page.</inlineHelpText>
    <label>Facebook</label>
    <type>Url</type>
</CustomField>