common/force-app/main/default/objects/Raise__c/fields/Form_Financial_information_summary__c.field-meta.xml
<CustomField>
    <fullName>Form_Financial_information_summary__c</fullName>
    <description>This field summarizes the financial information of the company.</description>
    <inlineHelpText>Summarize the key financial information of your company.</inlineHelpText>
    <label>Financial information summary</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>