common/force-app/main/default/objects/Raise__c/fields/Form_Financial_information_URL__c.field-meta.xml
<CustomField>
    <fullName>Form_Financial_information_URL__c</fullName>
    <description>This field provides the URL where detailed financial information can be accessed.</description>
    <inlineHelpText>Provide the URL where detailed financial information can be accessed.</inlineHelpText>
    <label>Financial information URL</label>
    <type>Url</type>
</CustomField>