common/force-app/main/default/objects/Raise__c/fields/Form_Funds_raised_to_date__c.field-meta.xml
<CustomField>
    <fullName>Form_Funds_raised_to_date__c</fullName>
    <description>This field indicates the total funds raised by the company to date.</description>
    <inlineHelpText>Specify the total amount of funds raised by your company to date.</inlineHelpText>
    <label>Funds raised to date</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>