common/force-app/main/default/objects/Raise__c/fields/Form_Glossary__c.field-meta.xml
<CustomField>
    <fullName>Form_Glossary__c</fullName>
    <description>This field provides glossary terms and definitions related to the company or industry.</description>
    <inlineHelpText>Include key terms and their definitions relevant to your company or industry.</inlineHelpText>
    <label>Glossary</label>
    <length>1400</length>
    <type>Html</type>
</CustomField>