common/force-app/main/default/objects/Raise__c/fields/Form_Growth_plan__c.field-meta.xml
<CustomField>
    <fullName>Form_Growth_plan__c</fullName>
    <description>This field outlines the company&apos;s growth plan and strategies for future expansion.</description>
    <inlineHelpText>Describe your company&apos;s growth plan and strategies for achieving future expansion.</inlineHelpText>
    <label>Growth plan</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>