common/force-app/main/default/objects/Raise__c/fields/Form_Halfway_reached__c.field-meta.xml
<CustomField>
    <fullName>Form_Halfway_reached__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Indicates if the user has reached the halfway mark</description>
    <label>Halfway reached</label>
    <type>Checkbox</type>
</CustomField>