common/force-app/main/default/objects/Raise__c/fields/Form_Instagram__c.field-meta.xml
<CustomField>
    <fullName>Form_Instagram__c</fullName>
    <description>This field contains the URL of the company&apos;s Instagram page.</description>
    <inlineHelpText>Provide the URL for your company&apos;s Instagram page.</inlineHelpText>
    <label>Instagram</label>
    <type>Url</type>
</CustomField>