common/force-app/main/default/objects/Raise__c/fields/Form_Intellectual_Property__c.field-meta.xml
<CustomField>
    <fullName>Form_Intellectual_Property__c</fullName>
    <description>This field provides details about the company&apos;s intellectual property.</description>
    <inlineHelpText>Include information about patents, trademarks, copyrights, or any other intellectual property your company holds.</inlineHelpText>
    <label>Intellectual Property</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>