common/force-app/main/default/objects/Raise__c/fields/Form_Interest_rate__c.field-meta.xml
<CustomField>
    <fullName>Form_Interest_rate__c</fullName>
    <description>Enter the interest rate payable on the note.</description>
    <inlineHelpText>Enter the interest rate payable on the note.</inlineHelpText>
    <label>Interest rate</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Percent</type>
</CustomField>