common/force-app/main/default/objects/Raise__c/fields/Form_Investment_Product_Type__c.field-meta.xml
<CustomField>
    <fullName>Form_Investment_Product_Type__c</fullName>
    <description>This field specifies the type of investment product offered by the company.</description>
    <inlineHelpText>Specify the type of investment product your company offers.</inlineHelpText>
    <label>Investment Product Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Ordinary Shares</fullName>
                <default>true</default>
                <label>Ordinary Shares</label>
            </value>
            <value>
                <fullName>Preference Shares</fullName>
            </value>
            <value>
                <fullName>Convertible Note</fullName>
            </value>
            <value>
                <fullName>Promissory Note</fullName>
            </value>
            <value>
                <fullName>SAFE Note</fullName>
            </value>
            <value>
                <fullName>Units in a MIS</fullName>
            </value>
            <value>
                <fullName>Secured Loan</fullName>
            </value>
            <value>
                <fullName>Interests in a Limited Partnership</fullName>
            </value>
            <value>
                <fullName>Shares</fullName>
                <isActive>false</isActive>
                <label>Shares</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>