common/force-app/main/default/objects/Raise__c/fields/Form_Investment_type__c.field-meta.xml
<CustomField>
    <fullName>Form_Investment_type__c</fullName>
    <description>This field indicates the type of investment being made.</description>
    <inlineHelpText>Indicate the type of investment: Retail or Wholesale.</inlineHelpText>
    <label>Investment type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Retail</fullName>
                <default>true</default>
                <label>Retail</label>
            </value>
            <value>
                <fullName>Wholesale</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>