common/force-app/main/default/objects/Raise__c/fields/Form_Legal_or_disciplinary_action__c.field-meta.xml
<CustomField>
    <fullName>Form_Legal_or_disciplinary_action__c</fullName>
    <description>This field provides information about any legal or disciplinary actions involving the company.</description>
    <inlineHelpText>Include details about any legal or disciplinary actions involving your company.</inlineHelpText>
    <label>Legal or disciplinary action</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>