common/force-app/main/default/objects/Raise__c/fields/Form_LinkedIn__c.field-meta.xml
<CustomField>
    <fullName>Form_LinkedIn__c</fullName>
    <description>This field contains the URL of the company&apos;s LinkedIn page.</description>
    <inlineHelpText>Provide the URL for your company&apos;s LinkedIn page.</inlineHelpText>
    <label>LinkedIn</label>
    <type>Url</type>
</CustomField>