common/force-app/main/default/objects/Raise__c/fields/Form_Maximum_target__c.field-meta.xml
<CustomField>
    <fullName>Form_Maximum_target__c</fullName>
    <description>This field indicates the maximum funding target for the company.</description>
    <inlineHelpText>Specify the maximum amount of funding your company is aiming to raise.</inlineHelpText>
    <label>Maximum target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>