common/force-app/main/default/objects/Raise__c/fields/Form_Minimum_Investment_amount__c.field-meta.xml
<CustomField>
    <fullName>Form_Minimum_Investment_amount__c</fullName>
    <description>This field indicates the minimum investment amount required.</description>
    <inlineHelpText>Specify the minimum amount that can be invested in your company.</inlineHelpText>
    <label>Minimum Investment amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>