common/force-app/main/default/objects/Raise__c/fields/Form_Minimum_target__c.field-meta.xml
<CustomField>
    <fullName>Form_Minimum_target__c</fullName>
    <description>This field indicates the minimum funding target for the company.</description>
    <inlineHelpText>Specify the minimum amount of funding your company needs to raise.</inlineHelpText>
    <label>Minimum target</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>