common/force-app/main/default/objects/Raise__c/fields/Form_Number_of_shares_on_issue__c.field-meta.xml
<CustomField>
    <fullName>Form_Number_of_shares_on_issue__c</fullName>
    <description>This field indicates the total number of shares currently issued by the company.</description>
    <inlineHelpText>Specify the total number of shares currently issued by your company.</inlineHelpText>
    <label>Number of shares on issue</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>