common/force-app/main/default/objects/Raise__c/fields/Form_Offer_close_date__c.field-meta.xml
<CustomField>
    <fullName>Form_Offer_close_date__c</fullName>
    <description>This field specifies the closing date for the current offer.</description>
    <inlineHelpText>Provide the closing date for the current offer.</inlineHelpText>
    <label>Offer close date</label>
    <type>Date</type>
</CustomField>