common/force-app/main/default/objects/Raise__c/fields/Form_Offer_launch_date__c.field-meta.xml
<CustomField>
    <fullName>Form_Offer_launch_date__c</fullName>
    <description>This field specifies the launch date for the current offer.</description>
    <inlineHelpText>Provide the launch date for the current offer.</inlineHelpText>
    <label>Offer launch date</label>
    <type>Date</type>
</CustomField>