common/force-app/main/default/objects/Raise__c/fields/Form_Organisation_structure__c.field-meta.xml
<CustomField>
    <fullName>Form_Organisation_structure__c</fullName>
    <description>This field describes the organizational structure of the company.</description>
    <inlineHelpText>Detail the organizational structure of your company.</inlineHelpText>
    <label>Organisation structure</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>