common/force-app/main/default/objects/Raise__c/fields/Form_Planned_use_of_funds__c.field-meta.xml
<CustomField>
    <fullName>Form_Planned_use_of_funds__c</fullName>
    <description>This field outlines the planned use of the funds raised.</description>
    <inlineHelpText>Describe how the funds raised will be used.</inlineHelpText>
    <label>Planned use of funds</label>
    <length>1200</length>
    <type>Html</type>
</CustomField>