common/force-app/main/default/objects/Raise__c/fields/Form_Price_per_note__c.field-meta.xml
<CustomField>
    <fullName>Form_Price_per_note__c</fullName>
    <description>Price per note for Convertible Note, Promissory Note and SAFE Note</description>
    <inlineHelpText>Price per note for Convertible Note, Promissory Note and SAFE Note</inlineHelpText>
    <label>Price per note</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>