common/force-app/main/default/objects/Raise__c/fields/Form_Price_per_share__c.field-meta.xml
<CustomField>
    <fullName>Form_Price_per_share__c</fullName>
    <description>Price per share for preference shares</description>
    <inlineHelpText>Price per share for preference shares</inlineHelpText>
    <label>Price per share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>