common/force-app/main/default/objects/Raise__c/fields/Form_Problem_or_Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Form_Problem_or_Opportunity__c</fullName>
    <description>This field identifies the problem or opportunity that the company is addressing.</description>
    <inlineHelpText>Describe the problem or opportunity your company is addressing.</inlineHelpText>
    <label>Problem or Opportunity</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>