common/force-app/main/default/objects/Raise__c/fields/Form_Progress__c.field-meta.xml
<CustomField>
    <fullName>Form_Progress__c</fullName>
    <description>This field provides an update on the company&apos;s progress.</description>
    <inlineHelpText>Provide an update on your company&apos;s progress.</inlineHelpText>
    <label>Progress</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>