common/force-app/main/default/objects/Raise__c/fields/Form_Proprietary_company__c.field-meta.xml
<CustomField>
    <fullName>Form_Proprietary_company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the company is a proprietary company.</description>
    <inlineHelpText>Check this box if your company is a proprietary company.</inlineHelpText>
    <label>Proprietary company</label>
    <type>Checkbox</type>
</CustomField>