common/force-app/main/default/objects/Raise__c/fields/Form_Public_company__c.field-meta.xml
<CustomField>
    <fullName>Form_Public_company__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the company is a public company.</description>
    <inlineHelpText>Check this box if your company is a public company.</inlineHelpText>
    <label>Public company</label>
    <type>Checkbox</type>
</CustomField>