common/force-app/main/default/objects/Raise__c/fields/Form_Raise_Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Form_Raise_Contact_Email__c</fullName>
    <description>This field contains the contact email address for the raise.</description>
    <inlineHelpText>Provide the contact email address for inquiries related to the raise.</inlineHelpText>
    <label>Raise Contact Email</label>
    <type>Email</type>
</CustomField>