common/force-app/main/default/objects/Raise__c/fields/Form_Redemption__c.field-meta.xml
<CustomField>
    <fullName>Form_Redemption__c</fullName>
    <description>Describe who can elect to redeem and on what conditions.</description>
    <inlineHelpText>Describe who can elect to redeem and on what conditions.</inlineHelpText>
    <label>Redemption</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>