common/force-app/main/default/objects/Raise__c/fields/Form_Registered_Aus__c.field-meta.xml
<CustomField>
    <fullName>Form_Registered_Aus__c</fullName>
    <defaultValue>false</defaultValue>
    <description>This field indicates whether the company is registered in Australia.</description>
    <inlineHelpText>Check this box if your company is registered in Australia.</inlineHelpText>
    <label>Is your company registered in Australia</label>
    <type>Checkbox</type>
</CustomField>