common/force-app/main/default/objects/Raise__c/fields/Form_Rights_associated_with_shares__c.field-meta.xml
<CustomField>
    <fullName>Form_Rights_associated_with_shares__c</fullName>
    <description>This field outlines the rights associated with the shares.</description>
    <inlineHelpText>Detail the rights that are associated with the shares being offered.</inlineHelpText>
    <label>Rights associated with shares</label>
    <length>1400</length>
    <type>LongTextArea</type>
</CustomField>