common/force-app/main/default/objects/Raise__c/fields/Form_Risk_warning__c.field-meta.xml
<CustomField>
    <fullName>Form_Risk_warning__c</fullName>
    <description>This field contains a risk warning related to the investment.</description>
    <inlineHelpText>Provide a risk warning to inform potential investors of the risks involved.</inlineHelpText>
    <label>Risk warning</label>
    <length>1400</length>
    <type>LongTextArea</type>
</CustomField>