common/force-app/main/default/objects/Raise__c/fields/Form_Risks_facing_the_business__c.field-meta.xml
<CustomField>
    <fullName>Form_Risks_facing_the_business__c</fullName>
    <description>This field outlines the risks facing the business.</description>
    <inlineHelpText>Describe the key risks that your business is currently facing.</inlineHelpText>
    <label>Risks facing the business</label>
    <length>1200</length>
    <type>LongTextArea</type>
</CustomField>