common/force-app/main/default/objects/Raise__c/fields/Form_Sector__c.field-meta.xml
<CustomField>
    <fullName>Form_Sector__c</fullName>
    <description>This field specifies the sector in which the company operates.</description>
    <inlineHelpText>Select the sector in which your company operates.</inlineHelpText>
    <label>Sector</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Sectors</valueSetName>
    </valueSet>
</CustomField>