common/force-app/main/default/objects/Raise__c/fields/Form_Security__c.field-meta.xml
<CustomField>
    <fullName>Form_Security__c</fullName>
    <description>Indicate whether the note is secured or unsecured.</description>
    <inlineHelpText>Indicate whether the note is secured or unsecured.</inlineHelpText>
    <label>Security</label>
    <length>255</length>
    <type>Text</type>
</CustomField>