common/force-app/main/default/objects/Raise__c/fields/Form_Share_price__c.field-meta.xml
<CustomField>
    <fullName>Form_Share_price__c</fullName>
    <description>This field indicates the price per share.</description>
    <formula>IF(Share_Price__c &gt; 0, 
   Share_Price__c, 
   Form_Valuation__c / Form_Number_of_shares_on_issue__c
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>Specify the price per share for the current offering.</inlineHelpText>
    <label>Share price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>