common/force-app/main/default/objects/Raise__c/fields/Form_Share_price_currency__c.field-meta.xml
<CustomField>
    <fullName>Form_Share_price_currency__c</fullName>
    <description>Currency for share price. Only for ordinary shares whole products</description>
    <inlineHelpText>What currency is the share price in? (Only for Ordinary Shares)</inlineHelpText>
    <label>Share price currency</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>AUD</fullName>
            </value>
            <value>
                <fullName>USD</fullName>
            </value>
            <value>
                <fullName>CAD</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>